assets/silas.css
:root {
    /* colors */ 
    --green: #cdd2ca;
    --lightgreen: #e5e8e3;
    --darkgreen: #b1b9ac;
    --darkergreen: #4b5346;
    --lightgray: lightgray;
    --darkgray: darkgray;

    /* style */
    --monospace: monospace;
    --serif: "Iowan Old Style", Baskerville, "Times New Roman", "Droid Serif", Times, "Source Serif Pro", serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    --sans-serif: -apple-system, BlinkMacSystemFont, "avenir next", avenir, "segoe ui", "helvetica neue", helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;

    /* layout */
    --sidebar-width: 160px;
    --main-margin-top: 91px;
}

@media only screen
and (min-device-width: 320px)
and (max-device-width: 480px) {
    :root {
        --sidebar-width: 90px;
        --main-margin-top: 57px;
    }
    header h1 {
        font-size: 1.2em;
    }
    body {
        word-wrap: break-word;
    }
}

html {
    overflow: hidden;
    height: 100%;
    font-family: var(--serif);
}

body {
    margin: 0;
    height: 100%;
    overflow-y: auto;
    overflow-x: hidden;
    background-color: var(--lightgreen);
}

header {
    background-color: var(--darkgreen);
    position: fixed;
    box-sizing: border-box;
    width: var(--sidebar-width);
    padding: 0.25rem;
    word-wrap: break-word;
}

header a {
    text-decoration: none;
    color: var(--text);
}

header a:hover {
    color: var(--text);
}

a:hover {
    color: var(--darkergreen);
}

nav {
    box-sizing: border-box;
    height: 100%;
    align: left;
    background-color: var(--green); 
    width: var(--sidebar-width);
    position: fixed;
    z-index: 1;
    left: 0;
    padding-top: 0.25em;
    padding-left: 0.25em;
    overflow-x: hidden;
}

nav a {
    color: black;
    font-weight: bold;
    text-decoration: none;
}

main {
    margin-left: var(--sidebar-width);
    margin-top: var(--main-margin-top);
    padding: 0px 10px;
    font-size: 95%;
}

article header {
    background-color: inherit;
    position: static;
    padding: 0;
    width: 100%;
}

h1 {
    margin: 0;
}

footer {
    align: left;
    width: var(--sidebar-width); 
    position: fixed;
    z-index: 1;
    bottom: 0;
}

img {
    width: 100%;
}

code {
    background-color: var(--lightgray);
    vertical-align: baseline;
    font-family: var(--monospace);
    word-break: break-all;
    word-wrap: break-word;
}

pre code {
    display: block;
    padding: 1em;
    overflow-x: scroll;
}

blockquote {
    background-color: var(--lightgray);
    font-size: 90%;
    width: 80%;
    overflow-x: scroll;
}

sup {
    vertical-align: top;
}

